kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: django-namespace
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - image: solunska/devops_project_image:latest
          name: django
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
