kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django-namespace
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
